feat: implement complete mock REST API for books
- Add BookController with all CRUD endpoints
- Implement GET, POST, PUT, DELETE operations
- Add mock data with 5 sample books
- Enable CORS for frontend integration
- All endpoints tested and working

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,6 +58,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <mainClass>book.tracker.BookTrackerApp</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.springframework.boot</groupId>
